...
            Form {
                TextValue(
                    title: "Label",
                    value: $element.label
                )
                .padding(.bottom, 16)
                .accessibilityIdentifier("LabelTextField")
                
                ValueView(
                    element: element,
                    value: $element.value,
                    adjustableOptions: $element.adjustableOptions,
                    traits: $element.trait
...
                }
                .padding(.bottom, 24)
                
                HStack {
                    Toggle("Accessible", isOn: $element.isAccessibilityElement)
                    Spacer()
                    Button("Delete", role: .destructive, action: deleteSelf)
                        .keyboardShortcut(.delete, modifiers: [])
                }
                
                Spacer()
            }
        }
...
