...
        
        if selectedCount == 1, outlineView.item(atRow: outlineView.selectedRow) is A11yContainer {
            groupButton.action = #selector(ungroup)
            groupButton.title = NSLocalizedString("Ungroup Container", comment: "")
        } else {
            groupButton.action = #selector(groupSelection)
            groupButton.title = NSLocalizedString("Group in Container", comment: "")
        }
    }
}

extension NavigatorController {
    public static func fromStoryboard(
...
