...
                 changeTo: defaultText)
        }
        
        return foundDocument
    }
    
    let defaultText = NSLocalizedString("Add your screenshot", comment: "")
    
    public func showDefaultText() {
        show(text: defaultText)
    }
    
    private func showBorder() {
...
